--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,8 @@ services:
   server:
     image: dockerhub.sliton.ru/gitea/gitea:1.16.3
     container_name: gittut
-    environment:
-      - USER_UID=1000
-      - USER_GID=1000
-      - GITEA__database__DB_TYPE=postgres
-      - GITEA__database__HOST=db:5432
-      - GITEA__database__NAME=gittut
-      - GITEA__database__USER=gittut
-      - GITEA__database__PASSWD=dfg3hb75gFF!ewt1
+    env_file:
+      - ./.env
     restart: always
     networks:
       - gitea
@@ -33,12 +27,10 @@ services:
     image: dockerhub.sliton.ru/postgres:13.6
     container_name: gittut_db
     restart: always
-    environment:
-      - POSTGRES_USER=gittut
-      - POSTGRES_PASSWORD=dfg3hb75gFF!ewt1
-      - POSTGRES_DB=gittut
+    env_file:
+      - ./.env
     volumes:
-       - /opt/docker/gittut/postgres:/var/lib/postgresql/data
+      - /opt/docker/gittut/postgres:/var/lib/postgresql/data
     networks:
       - gittut
 networks:
